--- a/02_Case_01.ipynb
+++ b/02_Case_01.ipynb
@@ -55,9 +55,7 @@
    "id": "64854ec4-8360-4fa4-abf6-10774d35e313",
    "metadata": {},
    "source": [
-    "h) María requires you a risk analysis to answer the question: What are the chances that the insurer will lose money in this contract❓ Use the following approximations:\n",
-    "- ...\n",
-    "- 1 million simulations"
+    "## h) María requires you a risk analysis to answer the question: What are the chances that the insurer will lose money in this contract❓ Use the following approximations:... 1 million simulations"
    ]
   },
   {
@@ -68,9 +66,9 @@
    "outputs": [],
    "source": [
     "* Number of simulations;\n",
-    "%let m = ;\n",
+    "%let m = 1000000;\n",
     "* Gross premium;\n",
-    "%let G = ;"
+    "%let G = 2947.72;"
    ]
   },
   {
@@ -138,7 +136,7 @@
    "outputs": [],
    "source": [
     "title \"Distribution of the aggregate loss (S)\";\n",
-    "proc sgplot data=;\n",
+    "proc sgplot data=work.aggclaim;\n",
     "\thistogram S;\n",
     "\tdensity S / type=normal transparency=0.7;\n",
     "\txaxis grid;\n",
@@ -201,11 +199,8 @@
    "id": "94cbb185-1f63-44c1-91b3-29b0a95d5e60",
    "metadata": {},
    "source": [
-    "j) Calculate the exact distribution of 𝑆 with the following approach:\n",
-    "- Define every state of the world i.e. all the possible combinations with an alive/dead status for every employee, how many states of the world are there❓\n",
-    "- Calculate the total claim and the probability of every state of the world.\n",
-    "- Calculate the probability function of 𝑆.\n",
-    "Which approximation would you choose❓ Why❓"
+    "## j) Calculate the exact distribution of 𝑆 with the following approach:\n",
+    "- Define every state of the world i.e. all the possible combinations with an alive/dead status for every employee, how many states of the world are there❓Calculate the total claim and the probability of every state of the world. Calculate the probability function of 𝑆."
    ]
   },
   {
@@ -216,10 +211,10 @@
    "outputs": [],
    "source": [
     "* Number of risk units in the individual risk model;\n",
-    "%let ne=;\n",
+    "%let ne=14;\n",
     "%put &=ne.;\n",
     "* Gross premium;\n",
-    "%let G = ;"
+    "%let G = 2947.72;"
    ]
   },
   {
@@ -240,7 +235,7 @@
     "\t\tdata _null_;\n",
     "\t\t\tcall symputx('nc',comb(&n.,&i.));\n",
     "\t\trun;\n",
-    "\t\t%put &=nc.;\n",
+    "\t\t%put There are &nc. state(s) of the world with &i. death(s) in the population of &n. employees.;\n",
     "\t\t* Generating the combinations;\n",
     "\t\tproc plan seed=2025;\n",
     "\t\t\tfactors iter=&nc. ordered id_employee = &i. of &n. comb / noprint;\n",
@@ -261,13 +256,13 @@
     "\tproc datasets lib=work nolist;\n",
     "\t\tdelete id_comb_: comb_:;\n",
     "\trun;\n",
-    "\t* i is the number of survivals;\n",
+    "\t* i is the number of survivors;\n",
     "\t%do i=1 %to &n.;\n",
     "\t\t* Computing the number of combinations;\n",
     "\t\tdata _null_;\n",
     "\t\t\tcall symputx('nc',comb(&n.,&i.));\n",
     "\t\trun;\n",
-    "\t\t%put &=nc.;\n",
+    "        %put There are &nc. state(s) of the world with &i. survivors(s) in the population of &n. employees.;\n",
     "\t\t* Generating the combinations;\n",
     "\t\tproc plan seed=2025;\n",
     "\t\t\tfactors iter=&nc. ordered id_employee = &i. of &n. comb / noprint;\n",
@@ -316,13 +311,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2796ae24-7e5e-43e0-a45a-da0252baf369",
+   "metadata": {},
+   "source": [
+    "The previous process produces the following data set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a30b14c7-55df-405a-80b1-15f56be7f61b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options obs=100;\n",
+    "proc print data=work.comb noobs;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd2c69f1-f044-4f9c-8a02-cd02952a61f7",
+   "metadata": {},
+   "source": [
+    "Create the matrix of the parameters for each employee"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "9098cdc3-fdec-400e-b038-aae2ed10d4ad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "* Create the matrix of the parameters for each employee;\n",
     "proc iml;\n",
     "\t\n",
     "\t* Number of risk units in the individual risk model;\n",
@@ -349,13 +371,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d3b60a62-00aa-45d8-9c12-c63552dff011",
+   "metadata": {},
+   "source": [
+    "Joining the states of the world with the parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a823cc77-119b-4391-a3c5-380003bc3cd0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "* Joining the states of the world with the parameters;\n",
     "proc sql;\n",
     "\tcreate table full_comb as\n",
     "\tselect\n",
@@ -375,13 +404,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e392de58-58e6-4464-af4c-bb744b29660b",
+   "metadata": {},
+   "source": [
+    "The previous process produces the following data set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdef560e-3ef3-4b19-9afa-79d1bbd59224",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options obs=100;\n",
+    "proc print data=work.full_comb noobs;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53aea4ca-f968-4ad3-92f1-fcfb39fec3c3",
+   "metadata": {},
+   "source": [
+    "Computing the total claim and its probability for each state of the world"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f56c8d15-a8c1-4b81-aa0d-8a468bb5264b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "* Computing the total claim and its probability for each state of the world;\n",
     "proc sql;\n",
     "\tcreate table full_comb2 as\n",
     "\tselect\n",
@@ -392,7 +448,35 @@
     "\tfrom full_comb\n",
     "\tgroup by number_deaths, iter\n",
     "\t;\n",
-    "quit;\n"
+    "quit;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02201a12-ee43-406f-9f6d-4961d7513792",
+   "metadata": {},
+   "source": [
+    "The previous process produces the following data set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b032fcd-3e9e-40c0-bb1e-85abc626f377",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "options obs=100;\n",
+    "proc print data=work.full_comb2 noobs;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c3f215a-430d-4d0d-90d5-a9e78ad5c9d4",
+   "metadata": {},
+   "source": [
+    "Grouping by total claim and its probability"
    ]
   },
   {
@@ -402,7 +486,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "* Grouping by total claim and its probability;\n",
     "proc sql;\n",
     "\tcreate table full_comb3 as\n",
     "\tselect\n",
@@ -413,6 +496,14 @@
     "\torder by S\n",
     "\t;\n",
     "quit;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5ac888c-e1a3-4b71-8feb-72367d03a34c",
+   "metadata": {},
+   "source": [
+    "The previous process produces the following data set:"
    ]
   },
   {
@@ -473,9 +564,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81f5d7d0-492a-4594-a55f-bb42f25639b9",
+   "metadata": {},
+   "source": [
+    "## 🤷🏼 Which approximation would you choose❓ Why❓"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "558193fb-4d12-4405-b330-ba06bae961ef",
+   "id": "94f84df3-8027-4177-bb33-1b08fcdbffe1",
    "metadata": {},
    "outputs": [],
    "source": []
