--- a/06_Case_03_Ruin_Theory.ipynb
+++ b/06_Case_03_Ruin_Theory.ipynb
@@ -129,13 +129,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%let alpha=0.5;\n",
-    "%let theta=2500;\n",
-    "%let lambda=5;\n",
-    "%let m=100;\n",
-    "%let h=100;\n",
+    "%let alpha=;\n",
+    "%let theta=;\n",
+    "%let lambda=;\n",
+    "%let m=;\n",
+    "%let h=;\n",
     "* In 100 units;\n",
-    "%let max_ben_h=200;\n",
+    "%let max_ben_h=;\n",
     "%put &=alpha &=theta &=lambda &=m &=h;"
    ]
   },
@@ -495,7 +495,7 @@
    "id": "2479f92e-f61d-4027-9d43-a0b13e61b9dc",
    "metadata": {},
    "source": [
-    "## ❓3) The initial surplus is 200 (in 100 units). Compute the ruin probabilities by time 1 year, 2 years and 3 years."
+    "## ❓3) The initial surplus is 150. Compute the ruin probabilities by time 1 year, 2 years and 3 years."
    ]
   },
   {
@@ -505,7 +505,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%let u = 150;\n",
+    "%let u = ;\n",
     "%put &=u;"
    ]
   },
@@ -635,12 +635,9 @@
     "proc sql;\n",
     "    create table work.ruin_3 as\n",
     "    select \n",
-    "    a.*\n",
-    "    , b.s as s3\n",
-    "    , b.fS as fS3\n",
-    "    , a.u_2 + &premium - b.s as u_3\n",
-    "    from work.ruin_2 a, work.collective b\n",
-    "    where a.u_2 > 0\n",
+    "    /* code here */\n",
+    "    from \n",
+    "    where \n",
     "    ;\n",
     "quit;"
    ]
