--- a/06_Case_04_Ruin_Theory.ipynb
+++ b/06_Case_04_Ruin_Theory.ipynb
@@ -129,14 +129,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%let alpha=;\n",
-    "%let theta=;\n",
-    "%let lambda=;\n",
-    "%let m=;\n",
-    "%let h=;\n",
+    "* Loss distribution;\n",
+    "%let alpha=0.5;\n",
+    "%let theta=2500;\n",
+    "* Frequency distribution;\n",
+    "%let lambda=5;\n",
+    "* Discretization parameters of the loss distribution;\n",
+    "* Maximum value of the discrete loss random variable (m x h);\n",
+    "%let m=100;\n",
+    "* Span for the discretization;\n",
+    "%let h=100;\n",
     "* In 100 units;\n",
-    "%let max_ben_h=;\n",
-    "%put &=alpha &=theta &=lambda &=m &=h;"
+    "%let max_ben_h=200;\n",
+    "%put &=alpha &=theta &=lambda &=m &=h &=max_ben_h;"
    ]
   },
   {
@@ -189,8 +194,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc print data = work.gamma_discrete;\n",
-    "run;"
+    "title \"Probability function of the discrete loss random variable\";\n",
+    "proc print data = work.gamma_discrete label;\n",
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -208,8 +215,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "title \"Checklist of the probability function\";\n",
     "proc means data=work.gamma_discrete n min max sum;\n",
-    "run;"
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -372,9 +381,22 @@
     "    col1=s\n",
     "    col2=fS;\n",
     "    label\n",
-    "    s = \"Loss amount\"\n",
+    "    s = \"Loss amount (in 100 units)\"\n",
     "    fs = \"P[S=s]\";\n",
     "quit;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6370365-1bff-4f10-9698-68fad6bc9127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title \"Probability function of the aggregate losses (in 100 units)\";\n",
+    "proc print data=work.collective(obs=10) label;\n",
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -392,8 +414,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "title \"Checklist of the probability function\";\n",
     "proc means data=work.collective n min max sum;\n",
-    "run;"
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -471,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "title \"Expected value principle premium\";\n",
+    "title \"Expected value principle premium (in 100 units)\";\n",
     "proc sql;\n",
     "    select sum(min(s,&max_ben_h)*fS)*(1+&load_fact) into: premium\n",
     "    from work.collective\n",
@@ -495,7 +519,7 @@
    "id": "2479f92e-f61d-4027-9d43-a0b13e61b9dc",
    "metadata": {},
    "source": [
-    "## ❓3) The initial surplus is 150. Compute the ruin probabilities by time 1 year, 2 years and 3 years."
+    "## ❓3) The initial surplus is 150 (in 100 units). Compute the ruin probabilities by time 1 year, 2 years and 3 years."
    ]
   },
   {
@@ -505,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%let u = ;\n",
+    "%let u = 150;\n",
     "%put &=u;"
    ]
   },
@@ -528,10 +552,53 @@
     "    create table work.ruin_1 as\n",
     "    select \n",
     "    a.*\n",
-    "    , &u + &premium - s as u_1\n",
+    "    , &u + &premium - s as u_1 label=\"Surplus at time 1\"\n",
     "    from work.collective a\n",
     "    ;\n",
     "quit;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84c54bf0-7b9f-4830-9610-10a0b62205ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title \"Probability function of the surplus at time 1\";\n",
+    "proc print data=work.ruin_1(obs=10) label;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2224f76e-7c6d-4fec-9c26-8273b9757e52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title \"Checklist of the probability function\";\n",
+    "proc means data=work.ruin_1 n min max sum;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da155202-ec92-4727-98b2-83d0f26f996e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title 'Distribution of the surplus at time 1';\n",
+    "ods graphics / reset width=10in height=4.8in imagemap noborder;\n",
+    "proc sgplot data=work.ruin_1;\n",
+    "needle x=u_1 y=fS /lineattrs=(color=yellow pattern=2 thickness=1) markers markerattrs=(size=1pt color=green SYMBOL=circlefilled);\n",
+    "xaxis grid;\n",
+    "yaxis grid;\n",
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -582,9 +649,9 @@
     "    a.*\n",
     "    , b.s as s2\n",
     "    , b.fS as fS2\n",
-    "    , a.u_1 + &premium - b.s as u_2\n",
+    "    , a.fS*b.fS as fu_2\n",
+    "    , a.u_1 + &premium - b.s as u_2 label=\"Surplus at time 2\"\n",
     "    from work.ruin_1 a, work.collective b\n",
-    "    where a.u_1 > 0\n",
     "    ;\n",
     "quit;"
    ]
@@ -596,8 +663,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc print data=work.ruin_2(obs=10);\n",
-    "run;"
+    "title \"Probability function of the surplus at time 2\";\n",
+    "proc print data=work.ruin_2(obs=10) label;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "759cb230-268d-47d8-8eb6-b1f9a5a9e16d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title \"Checklist of the probability function\";\n",
+    "proc means data=work.ruin_2 n min max sum;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a13d783-72cf-48fd-b981-208fa0ff10bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc sql;\n",
+    "    create table work.ruin_2_plot as\n",
+    "    select\n",
+    "    round(u_2,0.01) as u_2 label=\"Surplus at time 2\"\n",
+    "    , sum(fu_2) as fu_2\n",
+    "    from work.ruin_2\n",
+    "    group by round(u_2,0.01)\n",
+    "    ;\n",
+    "quit;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45909a32-38e1-4932-83ce-96acc5412513",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title 'Distribution of the surplus at time 2';\n",
+    "ods graphics / reset width=10in height=4.8in imagemap noborder;\n",
+    "proc sgplot data=work.ruin_2_plot;\n",
+    "needle x=u_2 y=fu_2 /lineattrs=(color=yellow pattern=2 thickness=1) markers markerattrs=(size=1pt color=green SYMBOL=circlefilled);\n",
+    "xaxis grid;\n",
+    "yaxis grid;\n",
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -609,9 +726,9 @@
    "source": [
     "title \"Ruin probability by 2 years\";\n",
     "proc sql;\n",
-    "    select sum(fS*fS2) + &pr1 into: pr2\n",
+    "    select sum(fu_2) + &pr1 into: pr2\n",
     "    from work.ruin_2\n",
-    "    where u_2 <= 0\n",
+    "    where u_2 <= 0 and u_1 > 0\n",
     "    ;\n",
     "quit;\n",
     "title;"
@@ -635,9 +752,12 @@
     "proc sql;\n",
     "    create table work.ruin_3 as\n",
     "    select \n",
-    "    /* code here */\n",
-    "    from \n",
-    "    where \n",
+    "    a.*\n",
+    "    , b.s as s3\n",
+    "    , b.fS as fS3\n",
+    "    , a.fu_2*b.fS as fu_3\n",
+    "    , a.u_2 + &premium - b.s as u_3 label=\"Surplus at time 3\"\n",
+    "    from work.ruin_2 a, work.collective b\n",
     "    ;\n",
     "quit;"
    ]
@@ -649,8 +769,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc print data=work.ruin_3(obs=10);\n",
-    "run;"
+    "title \"Probability function of the surplus at time 3\";\n",
+    "proc print data=work.ruin_3(obs=10) label;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8860daa-b77b-4c24-bc5f-4f0636c55d7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title \"Checklist of the probability function\";\n",
+    "proc means data=work.ruin_3 n min max sum;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14deb782-9ef1-44d5-8944-c1de5407fee6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc sql;\n",
+    "    create table work.ruin_3_plot as\n",
+    "    select\n",
+    "    round(u_3,0.01) as u_3 label=\"Surplus at time 3\"\n",
+    "    , sum(fu_3) as fu_3\n",
+    "    from work.ruin_3\n",
+    "    group by round(u_3,0.01)\n",
+    "    ;\n",
+    "quit;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "590d6c47-0051-4af3-a72a-2a8e6987a2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title 'Distribution of the surplus at time 3';\n",
+    "ods graphics / reset width=10in height=4.8in imagemap noborder;\n",
+    "proc sgplot data=work.ruin_3_plot;\n",
+    "needle x=u_3 y=fu_3 /lineattrs=(color=yellow pattern=2 thickness=1) markers markerattrs=(size=1pt color=green SYMBOL=circlefilled);\n",
+    "xaxis grid;\n",
+    "yaxis grid;\n",
+    "run;\n",
+    "title;"
    ]
   },
   {
@@ -662,9 +832,9 @@
    "source": [
     "title \"Ruin probability by 3 years\";\n",
     "proc sql;\n",
-    "    select sum(fS*fS2*fS3) + &pr2 into: pr3\n",
+    "    select sum(fu_3) + &pr2 into: pr3\n",
     "    from work.ruin_3\n",
-    "    where u_3 <= 0\n",
+    "    where u_3 <= 0 and u_2 > 0 and u_1 > 0 \n",
     "    ;\n",
     "quit;\n",
     "title;"
