--- a/06_Case_04_Ruin_Theory.ipynb
+++ b/06_Case_04_Ruin_Theory.ipynb
@@ -5,7 +5,7 @@
    "id": "303cf418-ef84-42a6-9f84-d80933cfca05",
    "metadata": {},
    "source": [
-    "# Case 3 | Ruin Theory"
+    "# Case 4 | Ruin Theory"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "id": "7e651a0a-5e28-413c-b790-9fc18e5df02d",
    "metadata": {},
    "source": [
-    "### Ruin probability by 1 year"
+    "### Ruin probability by 1 year i.e $ \\psi(1;u) $"
    ]
   },
   {
@@ -610,7 +610,7 @@
    "source": [
     "title \"Ruin probability by 1 year\";\n",
     "proc sql;\n",
-    "    select sum(fS) into: pr1\n",
+    "    select max(sum(fS),0) into: pr1\n",
     "    from work.ruin_1\n",
     "    where u_1 <= 0\n",
     "    ;\n",
@@ -633,7 +633,7 @@
    "id": "5b03852a-c114-47ef-b07f-246c1607d7a4",
    "metadata": {},
    "source": [
-    "### Ruin probability by 2 years"
+    "### Ruin probability by 2 years  i.e $ \\psi(2;u) $"
    ]
   },
   {
@@ -739,7 +739,7 @@
    "id": "0522c3db-ee31-44f8-ba48-0e89cfb90e2b",
    "metadata": {},
    "source": [
-    "### Ruin probability by 3 years"
+    "### Ruin probability by 3 years  i.e $ \\psi(3;u) $"
    ]
   },
   {
@@ -851,9 +851,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03e24464-1835-488a-b8f6-528d9d4b341e",
+   "metadata": {},
+   "source": [
+    "## Adjustment coefficient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a0c6d60-d128-4a15-8c97-c9ee0aa0b06d",
+   "metadata": {},
+   "source": [
+    "We define the adjustment coefficient $ \\tilde{R} $ as the positive solution of the equation:\n",
+    "\n",
+    "$ M_{W-c}(r)=1, r=? $\n",
+    "\n",
+    "where \n",
+    "* $ M_{Y} $ is the generating moment function of the random variable $ Y $\n",
+    "* $ W $ is the sum of the claims in the period\n",
+    "* $ c $ is the amount of the premium that is charged in each period.\n",
+    "\n",
+    "Note that $ M_{W-c}(r) = E[\\exp((W-c) \\times r)] = \\exp(- c \\times r) E[\\exp(W \\times r)] $\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f85de9-00ef-4b97-8adf-79ca82dbedbc",
+   "metadata": {},
+   "source": [
+    "## ❓4) For this case, compute the adjustment coefficient i.e $ \\tilde{R} $"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a58b163-2b88-42ab-b803-38adaa730378",
+   "id": "72adf8e0-9bf8-4e69-9669-c2abf3cf579d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc sql;\n",
+    "    create table work.collective_claim as\n",
+    "    select \n",
+    "    s as s label=\"Claim amount (in 100 units)\"\n",
+    "    , sum(fs) as fs\n",
+    "    from work.collective\n",
+    "    group by min(s,&max_ben_h)\n",
+    "    ;    \n",
+    "quit;\n",
+    "title \"Claim amount distribution\";\n",
+    "proc print data=work.collective_claim label;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3c09692-7478-4262-bf0e-9b809e7f785d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title 'Distribution of the claim collective risk';\n",
+    "ods graphics / reset width=10in height=4.8in imagemap noborder;\n",
+    "proc sgplot data=work.collective_claim;\n",
+    "needle x=s y=fS /lineattrs=(color=pink pattern=2 thickness=1) markers markerattrs=(color=purple SYMBOL=circlefilled);\n",
+    "xaxis grid;\n",
+    "yaxis grid;\n",
+    "run;\n",
+    "title;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42383b14-373f-4674-a3b4-9717ce09ce0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc iml;\n",
+    "\n",
+    "    start adj_coef(r);\n",
+    "\n",
+    "        use work.collective_claim;\n",
+    "        read all var _NUM_ into claim[colname=numVars];\n",
+    "        close work.collective_claim;\n",
+    "\n",
+    "        s = claim[,'s'];\n",
+    "        fs = claim[,'fs'];\n",
+    "        f=exp(-&premium.*r)*sum(exp(r*s) # fs) - 1;\n",
+    "        return(f);\n",
+    "    \n",
+    "    finish;\n",
+    "\n",
+    "    store module=_all_;\n",
+    "    \n",
+    "    /* Specify the interval to search for roots */\n",
+    "    intervals = {};\n",
+    "    adj_coef = froot(\"adj_coef\", intervals);\n",
+    "    print adj_coef;\n",
+    "    \n",
+    "    /* Double check */\n",
+    "    y = adj_coef(adj_coef);\n",
+    "    print(y);\n",
+    "\n",
+    "    * We send the results to a data set;\n",
+    "    create work.adj_coef from adj_coef;\n",
+    "    append from adj_coef;\n",
+    "    close work.adj_coef;  \n",
+    "\n",
+    "\n",
+    "quit;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ae9a876-6ed9-4e7b-84c3-aa44fa127c3e",
+   "metadata": {},
+   "source": [
+    "## Lundberg’s inequality in discrete time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ec79d5-548c-4ba0-873e-875abe91c937",
+   "metadata": {},
+   "source": [
+    "Let $ U_n = u + nc - \\sum_{i=1}^n W_i $ for $ n = 1, 2, \\dots $ and $ W_1, W_2, \\dots $ be mutually independent and identically distributed with $ E[W_i] = \\mu < c $. For $ u > 0 $: \n",
+    "\n",
+    "$ \\psi (u)=\\frac{\\exp(-\\tilde{R}u)}{E[\\exp(-\\tilde{R}U_{\\tilde{T}})|\\tilde{T}<\\infty]} $\n",
+    "\n",
+    "where $ \\psi (u) $ is the ruin probability and $ \\tilde{T} $ is the time of ruin.\n",
+    "\n",
+    "Since $U_{\\tilde{T}}<0$, it follows that\n",
+    "\n",
+    "$ \\psi(u) \\leq \\exp (-\\tilde{R}u) $\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e236d01-13a5-4129-9a63-df0ba1eb7162",
+   "metadata": {},
+   "source": [
+    "## ❓5) For this case, compute the upper limit for $ \\psi(u) $ i.e. $ \\exp (-\\tilde{R}u) $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbb5850-8b50-4581-8531-1744b6101e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data work.adj_coef2;\n",
+    "    set work.adj_coef;\n",
+    "    phi = exp(-&u*col1);\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0da4ff5d-dde0-4d60-a137-4712b756de9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proc print data=work.adj_coef2;\n",
+    "run;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e3b125d-5d4d-4ac4-8bb8-0121e56ed32e",
    "metadata": {},
    "outputs": [],
    "source": []
