--- a/06_Case_04_Ruin_Theory.ipynb
+++ b/06_Case_04_Ruin_Theory.ipynb
@@ -552,7 +552,7 @@
     "    create table work.ruin_1 as\n",
     "    select \n",
     "    a.*\n",
-    "    , &u + &premium - s as u_1 label=\"Surplus at time 1\"\n",
+    "    , &u + &premium - min(s,&max_ben_h) as u_1 label=\"Surplus at time 1\"\n",
     "    from work.collective a\n",
     "    ;\n",
     "quit;"
@@ -650,7 +650,7 @@
     "    , b.s as s2\n",
     "    , b.fS as fS2\n",
     "    , a.fS*b.fS as fu_2\n",
-    "    , a.u_1 + &premium - b.s as u_2 label=\"Surplus at time 2\"\n",
+    "    , a.u_1 + &premium - min(b.s,&max_ben_h) as u_2 label=\"Surplus at time 2\"\n",
     "    from work.ruin_1 a, work.collective b\n",
     "    ;\n",
     "quit;"
@@ -756,7 +756,7 @@
     "    , b.s as s3\n",
     "    , b.fS as fS3\n",
     "    , a.fu_2*b.fS as fu_3\n",
-    "    , a.u_2 + &premium - b.s as u_3 label=\"Surplus at time 3\"\n",
+    "    , a.u_2 + &premium - min(b.s,&max_ben_h) as u_3 label=\"Surplus at time 3\"\n",
     "    from work.ruin_2 a, work.collective b\n",
     "    ;\n",
     "quit;"
@@ -895,7 +895,7 @@
     "proc sql;\n",
     "    create table work.collective_claim as\n",
     "    select \n",
-    "    s as s label=\"Claim amount (in 100 units)\"\n",
+    "    min(s,&max_ben_h) as s label=\"Claim amount (in 100 units)\"\n",
     "    , sum(fs) as fs\n",
     "    from work.collective\n",
     "    group by min(s,&max_ben_h)\n",
@@ -949,7 +949,7 @@
     "    store module=_all_;\n",
     "    \n",
     "    /* Specify the interval to search for roots */\n",
-    "    intervals = {};\n",
+    "    intervals = {0.01 1};\n",
     "    adj_coef = froot(\"adj_coef\", intervals);\n",
     "    print adj_coef;\n",
     "    \n",
