--- a/07_Case_05_Stochastic_Analysis_Insurance.ipynb
+++ b/07_Case_05_Stochastic_Analysis_Insurance.ipynb
@@ -10,10 +10,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84859eb5-cc0e-4163-9daf-f71a0e6f6552",
+   "metadata": {},
+   "source": [
+    "Actuarial Science Undergratuate Program | Business Faculty | Risk Theory Class | José Enrique Pérez Salvador"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9b6512c0-a0de-4b34-b366-c364143aba6c",
    "metadata": {},
    "source": [
     "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0edce4f4-789f-4165-8a3b-a1d32cfaaf4c",
+   "metadata": {},
+   "source": [
+    "A model is a simplified mathematical description that is constructed based on the knowledge and experience of the actuary combined with data from the past. The model provides a balance between simplicity and conformity to the available data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8259d226-a517-4763-b03b-d721748a9578",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: right;\">\n",
+    "Klugman, Stuart A. et. al., Loss Models: from Data to Decisions, 4th ed., Wiley, EUA, 2012.\n",
+    "</div>"
    ]
   },
   {
@@ -134,7 +160,7 @@
    "id": "f7d9c7df-458d-4727-a72e-3f09777a973c",
    "metadata": {},
    "source": [
-    "## Basic equation"
+    "## Basic equations"
    ]
   },
   {
@@ -211,21 +237,55 @@
   },
   {
    "cell_type": "markdown",
-   "id": "164a4a6f-7d70-4a7c-90ed-83349da37e78",
+   "id": "6c2cad35-a9dd-4b18-80a4-015f6e09849f",
    "metadata": {},
    "source": [
-    "where the primed quantities indicate the amounts paid in year $ t $, as distinct from the unprimed quantities, which represent the earned or incurred amounts. The links between them are:\n",
-    "* $ B(t) = B^{\\prime}(t) - V(t) + V(t-1) $ where $ V(t) $ is the unearned premium reserve at the end of the accounting period (year) $ t $. Earned premiums for an accounting year are those parts of premiums written in the year, or in previous years, which relate to risks borne in that accounting year. In so far as premiums written during the accounting year provide cover for risks in the next or subsequent accounting years, the part of the premium relating to those later periods is carried forward by establishing a provision for unearned premiums.\n",
-    "* $ X(t) = X'(t) + C(t) - C(t-1) $"
+    "where:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c676b09-c9c1-4459-9b5d-60228f453172",
+   "cell_type": "markdown",
+   "id": "164a4a6f-7d70-4a7c-90ed-83349da37e78",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* The primed quantities ($ B^{\\prime}(t), X^{\\prime}(t)  $) indicate the amounts paid in year $ t $, as distinct from the unprimed quantities ($ B(t), X(t)  $), which represent the earned or incurred amounts. The links between them are:\n",
+    "1. $ B(t) = B^{\\prime}(t) - V(t) + V(t-1) $ where $ V(t) $ is the unearned premium reserve at the end of the accounting period (year) $ t $. Earned premiums for an accounting year are those parts of premiums written in the year, or in previous years, which relate to risks borne in that accounting year. In so far as premiums written during the accounting year provide cover for risks in the next or subsequent accounting years, the part of the premium relating to those later periods is carried forward by establishing a provision for unearned premiums.\n",
+    "2. $ X(t) = X^{\\prime}(t) + C(t) - C(t-1) $. Incurred claims in the accounting year $ t $ are defined as the total amount of claims arising from events which have occurred in the year, irrespective of when final settlement is made. It should be noted that the actual settlement (payment) of some claims may be delayed considerably beyond the year in which the event giving rise to the claim occurs and may indeed take place in stages. When accounts are drawn up at any particular point, a provision has to be established in the balance sheet for the outstanding claim payments likely to arise in respect of all previous claim events. Some of these claims may not even have been reported at the time the provision has to be set up. The provision is known as the reserve for outstanding claims at time $ t $, denoted by $ C(t) $, or also more loosely as the claim reserve.\n",
+    "* $ J^\\prime $ is the cash income earned on the assets\n",
+    "* $ \\Delta^{*}A $ the change in value of the assets, including the difference of values arising from new investments and from sold or matured assets. Note: $ J^\\prime + \\Delta^{*}A = J $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f23b5cc2-d679-4e7c-8e56-07fa23c14888",
+   "metadata": {},
+   "source": [
+    "The primary problem is to find rules and sub-modules for the various entries in the above equations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb87ba6c-6fe3-4344-9862-323347060de8",
+   "metadata": {},
+   "source": [
+    "## Initial choices and definitions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6534a968-cb51-422f-af57-a6f18dd49531",
+   "metadata": {},
+   "source": [
+    "The releveant model information self-evidently, depends largely on the intended application. If it is aimed at supporting the analysis of the stochastic behaviour of a particular insurer, then the model should be fitted to the actual and anticipated structures of this business, having regard to whether the analysis is intended primarily for rating, reserving, investments, reinsurance, sales or give a general account of the financial strength of the company. These special requirements may determine how detailed the model assumptions and parametrizations should be in the different sub-modules of the model.The inital parameter set might be described as a reference insurer (or a standard or model insurer)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01ce98b5-ef5e-48b4-aabb-e3bdffa246e0",
+   "metadata": {},
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
@@ -239,7 +299,10 @@
    "file_extension": ".sas",
    "mimetype": "text/x-sas",
    "name": "sas"
-  }
+  },
+  "toc-autonumbering": false,
+  "toc-showcode": true,
+  "toc-showmarkdowntxt": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
